# PaperPilot

./: .dockerignore  .env.example  .gitignore  COMMANDS.md  Dockerfile  Makefile  README.md  chainlit.md  docker-compose.yml  pyproject.toml  start.sh
.chainlit/: config.toml
data/: README.md
data/golden/: golden_set.jsonl  seed_questions.jsonl
data/haic/: artifact_1052bf90-6f66-4fe2-8696-a9d97f17121e.json  artifact_1a970499-d6e2-45bf-8923-5f27b37b28b7.json  artifact_2aae3ceb-8f6e-41cb-8bd6-f0ce0f166bfe.json  artifact_2b75d103-ea88-4806-bff9-8ec93f934b18.json  artifact_31f6214d-9cb6-4668-9ffe-e00257a1f858.json  artifact_3be213c1-0401-4f6e-bcc7-319ebe663082.json  artifact_48eb0c31-18fb-468c-ae6e-50f03ae0a9b4.json  artifact_50c998a1-daba-4b60-9fdb-dcc3d5dd1f12.json  artifact_52991af4-a633-46d0-a42c-e5eb36809b67.json  artifact_56b069bc-8166-42af-8497-3ace5c9b535c.json  artifact_5b86ad97-4971-4d5a-bf7e-a7e49ff3d426.json  artifact_5e037ce6-3ca3-4e7b-9488-450e8933ad58.json  artifact_629e50d8-eb5b-4ffa-bd1f-c52adae7bfea.json  artifact_638f5b76-207a-4630-abd7-a2f8797fa979.json  artifact_72ebc64a-5916-4f84-8d8b-60ba673c8031.json  artifact_78d8aa83-208a-4005-99e5-06c6270828ac.json  artifact_87db8a3d-1403-4038-8ebc-d9fcf8c5dda0.json  artifact_98c374ee-6d84-441f-bf90-9a2087e7cd60.json  artifact_9ac48361-47d2-419e-8f80-4e6299eb01e8.json  artifact_a1d30954-b01e-4902-a94c-c7de00a7e4fa.json  artifact_a9721743-21b2-4e55-b3aa-362781d41cc6.json  artifact_b0f545c9-baf7-48ab-8456-e2e1eeb42f00.json  artifact_b65048e0-58e6-4969-9dcd-cd03e3565b55.json  artifact_ba7fcc4a-fc22-489f-a48c-5cd69eb40493.json  artifact_dbd91669-5dc9-4a6f-a979-2910d3c2aca1.json  (+36 more)
public/: README.md  stylesheet.css
reports/: PaperPilot_Presentation.pptx  PaperPilot_Report.docx  README.md  haic_unified.json  haic_v1.json  haic_v2.json  haic_v3.json  ragas_ic_oc_split.json  ragas_v1.json  ragas_v1_20260508-024517.csv  ragas_v1_20260519-230514.csv  ragas_v2.json  ragas_v2_20260508-033643.csv  ragas_v2_20260519-233953.csv  ragas_v3.json  ragas_v3_20260520-012204.csv  report_gr.html  tool_call_acc_v1.json  tool_call_acc_v2.json  tool_call_acc_v3.json
src/: README.md
src/paperpilot/: __init__.py  cli.py  (+2 more)
tests/: README.md  test_chunkers.py  test_filter_inference.py  test_tool_call_acc.py
(+30 files in other folders)
