[project]
name = "paperpilot"
version = "0.1.0"
description = "Agentic RAG over recent NLP/LLM/RAG/Agents research papers."
requires-python = ">=3.11,<3.14"
authors = [{ name = "Spyros Tselios" }]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # ── Core LLM / agent stack ───────────────────────────
    "openai>=1.40.0",
    "langchain-google-genai>=1.0.0",
    "google-genai>=0.1.0",
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",

    # ── Vector store ─────────────────────────────────────
    "qdrant-client>=1.12.0,<1.13.0",

    # ── Ingestion ────────────────────────────────────────
    "arxiv>=2.1.3",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",

    # ── Reranker (v2) ────────────────────────────────────
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",

    # ── Evaluation ───────────────────────────────────────
    "ragas>=0.2.6",
    "datasets>=2.20.0",

    # ── Observability ────────────────────────────────────
    "langfuse>=2.50.0",

    # ── Server / UI ──────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "chainlit>=1.3.0",

    # ── MCP (bonus) ──────────────────────────────────────
    "mcp>=1.0.0",

    # ── Config / utils ───────────────────────────────────
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
paperpilot = "paperpilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperpilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
